# Claude-Desktop

./: claude_desktop_config.json
metasploit-mcp/: pyproject.toml  requirements.txt  server.py
metasploit-mcp/src/metasploit_mcp/: __init__.py  client.py  tools.py  utils.py
